--- a/index.html
+++ b/index.html
@@ -142,10 +142,12 @@
       justify-content: space-between;
       margin-bottom: 15px;
       color: white;
+      margin-left: -10px; /* Mover los interruptores ligeramente a la izquierda */
     }
 
     .switch-label {
       font-size: 14px;
+      font-weight: bold; /* Poner los labels en negrita */
     }
 
     .switch {
