--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             fillOpacity: 0.5
           }).addTo(polygonLayer);
 
-          leafletPolygon.bindPopup("Zona de Explotación: " + zone);
+          leafletPolygon.bindPopup("Zona: " + zone);
         } catch (error) {
           console.error("Error al procesar el polígono:", error);
         }
