--- a/index.html
+++ b/index.html
@@ -304,12 +304,14 @@
 
     function processCSVData(data) {
       const zoneColumn = vInicialSwitch.checked ? 'ZE. Zona de Explotación' : 'Nueva Zona';
+      const polColumn = vInicialSwitch.checked ? 'Pol. ZE. Zona de Explotación' : 'Pol. Nueva Zona';
 
       data.forEach(function(row) {
         try {
           const polygonData = JSON.parse(row['Poligon']);
           const sectionCensal = row['ZE. Sección Censal'];  // Columna con la Sección Censal
           const zone = row[zoneColumn];
+          const poliza = row[polColumn];  // Póliza basada en el interruptor
 
           const coordinates = polygonData.coordinates[0].map(coord => [coord[1], coord[0]]); // Invertir latitud y longitud
 
@@ -338,7 +340,12 @@
             });
           });
 
-          leafletPolygon.bindPopup(`<b>Sección Censal:</b> ${sectionCensal}<br><b>Zona de Explotación:</b> ${zone}`);
+          // Mostrar en el popup la información relevante: Sección Censal, Zona y Póliza
+          leafletPolygon.bindPopup(`
+            <b>Sección Censal:</b> ${sectionCensal}<br>
+            <b>Zona de Explotación:</b> ${zone}<br>
+            <b>Póliza:</b> ${poliza}
+          `);
         } catch (error) {
           console.error("Error al procesar el polígono:", error);
         }
